--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,15 @@
   align-items: center;
 }
 
+.avatar {
+  margin: 0 0 0 15px;
+}
+
+.linkStyle {
+  border: 1px solid black;
+  color: #2d2d2d;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -33,16 +42,24 @@
   text-decoration: none;
 }
 
+.headerStyles {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .title {
+  display: flex;
+  color: #0070f3;
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -61,8 +78,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
+    monospace;
 }
 
 .grid {
@@ -103,9 +120,9 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.heroSection {
+  background: rgba(0, 0, 0,);
+  width: 300px;
 }
 
 @media (max-width: 600px) {
